--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PAGINA TESTE/title>
 </head>
 <body>
-    <p>teste git Hub</p>
+    <p>teste git Hub !</p>
     <h1> teste de alteração de versão do Git !</h1>
 </body>
 </html>
