--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>teste git Hub !</p>
-    <h1> teste de alteração de versão do Git !</h1>
+    <h1>teste de alteração de versão do Git !</h1>
+    <h2> teste de alteração de versão do Git 02</h2>
 </body>
 </html>
